# meta-prompter

./: .aider.conf.yml  .gitignore  .windsurfrules  CLAUDE.md  README.md  jina_reader.py  main.py  parallel_scraper.py  pyproject.toml
crewai/: project.yaml
dummy/: project.yaml
examples/: langchain.yaml
meta_prompter/: arize_phoenix.py  custom_types.py  jina_reader.py  main.py  parallel_scraper.py
meta_prompter/cli/: project.py
meta_prompter/core/: job_manager.py  models.py  project.py  url_processor.py
meta_prompter/models/: page.py  scrape_job.py
meta_prompter/scrapers/: base.py  crawl4ai_scraper.py  jina.py  job_manager.py  models.py  parallel.py  sequential.py  url_utils.py  utils.py
meta_prompter/services/jina/: client.py
meta_prompter/utils/: file_utils.py  logging.py
notes/: claude-changes.md  mp-generation-input.txt  mp-generation-input2.txt
specs/: crawl4ai-crawler.md  crawl4ai-llmstxt.md  fix.md  jina.md  project.md  prompt.txt  weaknesses.md
src/meta_prompter/: parallel_scraper.py
tests/: test_crawl4ai_scraper.py  test_jina_reader.py  test_parallel_scraper.py  test_scraping_job.py
