[project]
name = "meta-prompter"
version = "0.1.0"
description = "A tool to generate meta-prompts from documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.6.1",
    "click>=8.1.7",
    "litellm>=1.54.1",
    "openinference-instrumentation-litellm>=0.1.5",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
app = "meta_prompter.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
